Update modules/overlay/src/test/java/edu/emory/viseu/overlay/PeerRegistryTest.java
Co-authored-by: gemini-code-assist[bot] <176961590+gemini-code-assist[bot]@users.noreply.github.com>